force-app/main/default/objects/Risk_Profile__mdt/Risk_Profile__mdt.object-meta.xml
<CustomObject>
    <label>Risk Profile</label>
    <pluralLabel>Risk Profiles</pluralLabel>
</CustomObject>