force-app/main/default/objects/Risk_Profile__mdt/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>HelpText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>