force-app/main/default/objects/Risk_Profile__mdt/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>