force-app/main/default/objects/Risk_Profile__mdt/fields/Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>Raw_Score__c</fullName>
    <label>Raw Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>