force-app/main/default/objects/Risk_Profile__mdt/fields/Risk_Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Profile_Type__c</fullName>
    <label>Risk Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk Tracked by SCE</fullName>
                <default>true</default>
                <label>Risk Tracked by SCE</label>
            </value>
            <value>
                <fullName>Additional Risk Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>