force-app/main/default/objects/Risk_Profile__mdt/fields/Weight_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Weight_Multiplier__c</fullName>
    <label>Weight Multiplier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>